--- a/package.json
+++ b/package.json
@@ -35,26 +35,27 @@
     "connected-react-router": "^6.9.1",
     "css-mediaquery": "^0.1.2",
     "date-fns": "^2.23.0",
+    "eslint-config-next": "^14.0.3",
     "firebase": "^9.0.2",
     "formik": "^2.2.9",
     "formik-material-ui-pickers": "^1.0.0-alpha.1",
     "material-ui-popup-state": "^2.0.0",
     "moment": "^2.29.1",
-    "next": "latest",
-    "next-transpile-modules": "^9.0.0",
+    "next": "13.5.4",
+    "next-transpile-modules": "^10.0.1",
     "notistack": "^2.0.3",
     "polished": "^4.2.2",
     "prism-react-renderer": "^1.2.1",
     "prop-types": "^15.7.2",
     "raw-loader": "^4.0.2",
-    "react": "^17.0.2",
+    "react": "^18.2.0",
     "react-apexcharts": "^1.3.9",
     "react-big-calendar": "^0.35.0",
     "react-bottom-scroll-listener": "^5.0.0",
     "react-code-input": "^3.10.1",
     "react-color": "^2.19.3",
     "react-content-loader": "^6.0.3",
-    "react-dom": "^17.0.2",
+    "react-dom": "^18.2.0",
     "react-draggable": "^4.4.4",
     "react-dropzone": "^11.4.0",
     "react-google-maps": "^9.4.5",
@@ -66,7 +67,7 @@
     "react-photo-gallery": "^8.0.0",
     "react-player": "^2.9.0",
     "react-popper": "^2.2.5",
-    "react-quill": "^1.3.5",
+    "react-quill": "^2.0.0",
     "react-raw-html": "^0.4.0",
     "react-redux": "^7.2.5",
     "react-render-html": "^0.6.0",
@@ -98,6 +99,8 @@
     "typescript": "^5.3.2",
     "velocity-animate": "^1.5.2",
     "velocity-react": "^1.4.3",
+    "webpack": "^5.89.0",
+    "webpack-cli": "^5.1.4",
     "yup": "^0.32.9"
   },
   "scripts": {
