--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@mui/x-data-grid": "^5.2.1",
     "@mui/x-data-grid-generator": "^5.2.1",
     "@mui/x-data-grid-pro": "^5.2.1",
+    "@react-native-async-storage/async-storage": "^1.19.8",
     "@reduxjs/toolkit": "^1.9.7",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
@@ -101,7 +102,8 @@
     "velocity-react": "^1.4.3",
     "webpack": "^5.89.0",
     "webpack-cli": "^5.1.4",
-    "yup": "^0.32.9"
+    "yup": "^0.32.9",
+    "pkce-challenge": "^3.0.0"
   },
   "scripts": {
     "dev": "next",
