--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "next": "13.5.4",
     "next-transpile-modules": "^10.0.1",
     "notistack": "^2.0.3",
+    "pkce-challenge": "^3.0.0",
     "polished": "^4.2.2",
     "prism-react-renderer": "^1.2.1",
     "prop-types": "^15.7.2",
@@ -73,7 +74,7 @@
     "react-redux": "^7.2.5",
     "react-render-html": "^0.6.0",
     "react-router-config": "^5.1.1",
-    "react-router-dom": "^5.3.0",
+    "react-router-dom": "6.18.0",
     "react-router-redux": "^4.0.8",
     "react-share": "^4.4.0",
     "react-simple-maps": "^2.3.0",
@@ -102,8 +103,7 @@
     "velocity-react": "^1.4.3",
     "webpack": "^5.89.0",
     "webpack-cli": "^5.1.4",
-    "yup": "^0.32.9",
-    "pkce-challenge": "^3.0.0"
+    "yup": "^0.32.9"
   },
   "scripts": {
     "dev": "next",
