--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,11 +8,7 @@
     "strict": true,
     "skipLibCheck": true,
     "noImplicitAny": false,
-    "lib": [
-      "dom",
-      "dom.iterable",
-      "esnext"
-    ],
+    "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
     "allowSyntheticDefaultImports": true,
     "noFallthroughCasesInSwitch": true,
@@ -27,9 +23,7 @@
   //   "src"
   // ],
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
-  "exclude": [
-    "node_modules"
-  ],
+  "exclude": ["node_modules"],
   "paths": {
     "@/*": ["./src/*"],
     "react": ["./node_modules/@types/react"]
