--- a/package.json
+++ b/package.json
@@ -98,6 +98,7 @@
     "stylis": "^4.0.10",
     "stylis-plugin-rtl": "^2.1.0",
     "tslib": "^2.6.2",
+    "typed-scss-modules": "^7.1.4",
     "typescript": "^5.3.2",
     "velocity-animate": "^1.5.2",
     "velocity-react": "^1.4.3",
